--- a/settings.yml
+++ b/settings.yml
@@ -238,7 +238,7 @@ scoreboard:
 spawn:
   safespawn_radius: 15
 hologram:
-  display_ticks: 2
+  display_ticks: 1
 points:
   death: 0.1
   kill:
@@ -248,7 +248,7 @@ points:
     player: 3.0
     guard: 0.8
   drink: 0.05
-  friend_add: 0.08
+  friend_add: 0.00
   heal:
     self: 0.5
     other: 1.3
@@ -259,7 +259,7 @@ points:
   ghost: 0.2
   undead: 0.25
 chests:
-  random_layout: false
+  random_layout: true
 ghosts:
   can_damage: false
 zombie_awareness_month:
