--- a/chests.yml
+++ b/chests.yml
@@ -1997,6 +1997,18 @@ types:
       item:
         ==: org.bukkit.inventory.ItemStack
         type: IRON_AXE
+  DELETE CHEST:
+    47e72a1a-cc8d-47f0-ae03-c70059af2524:
+      probability: 100
+      amount_minimum: 1
+      amount_maximum: 1
+      item:
+        ==: org.bukkit.inventory.ItemStack
+        type: STONE
+        meta:
+          ==: ItemMeta
+          meta-type: UNSPECIFIC
+          display-name: REMOVE CHEST
 locations:
   210885ab-355a-47e8-8e15-0bf083e30acb, -3, 4, 2:
     material: CHEST
@@ -2186,7 +2198,7 @@ locations:
   210885ab-355a-47e8-8e15-0bf083e30acb, 3598, 199, -3182:
     material: CHEST
     orientation: NORTH
-    type: Test
+    type: DELETE CHEST
     respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3656, 208, -3113:
     material: CHEST
@@ -2642,4 +2654,19 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Civ_Tool
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, 3754, 130, -2907:
+    material: CHEST
+    orientation: NORTH
+    type: DELETE CHEST
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, 3752, 130, -2908:
+    material: CHEST
+    orientation: NORTH
+    type: DELETE CHEST
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, 3749, 130, -2910:
+    material: CHEST
+    orientation: SOUTH
+    type: Axes
     respawn_time: -1
