--- a/ranks.yml
+++ b/ranks.yml
@@ -45,6 +45,10 @@ ranks:
           display-name: §rRadio
           lore:
           - §r§eHold and chat to use
+  '1':
+    chat_prefix: '[Lvl 1]'
+    equipment:
+      inventory: []
   '100':
     chat_prefix: ''
     equipment:
