--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -201,9 +201,8 @@ giant:
       minimum: 1
       maximum: 1
     biome:
-      includes:
+      excludes:
       - Mesa Plateau
-      - DesertHills
     limits:
       minimum_z: -4095
       maximum_z: -3000
