--- a/mob_settings.yml
+++ b/mob_settings.yml
@@ -209,6 +209,8 @@ giant:
     biome:
       excludes:
       - Sky
+      includes:
+      - Mesa Plateau
     limits:
       minimum_z: -4095
       maximum_z: -3000
