--- a/userdata/cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf/kit.yml
+++ b/userdata/cc5e7f28-0abd-4a0e-b7b4-29032f5f6dcf/kit.yml
@@ -1,1 +1,50 @@
-equipment: {}
+equipment:
+  inventory:
+  - ==: org.bukkit.inventory.ItemStack
+    type: EYE_OF_ENDER
+    meta:
+      ==: ItemMeta
+      meta-type: UNSPECIFIC
+      display-name: §rRadio
+      lore:
+      - §r§eHold and chat to use
+  - ==: org.bukkit.inventory.ItemStack
+    type: POTION
+    meta:
+      ==: ItemMeta
+      meta-type: POTION
+      display-name: §rCold Bottle of Water
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
+  - null
